Detect libnfct and libcap-ng on Linux with NAT
On Linux systems with IP masquerading enabled, check for the presence
of libnetfilter_conntrack (libnfct) and libcap-ng.

--- a/HACKING
+++ b/HACKING
@@ -39,6 +39,7 @@ Source Tree
 
 .
 |-- doc:         Documentation and manual pages
+|-- m4:          Macros for autoconf
 `-- src:         Source code
     |-- kernel:      Kernel-specific functions
     `-- missing:     Portable implementations of missing functions
