--- a/INSTALL
+++ b/INSTALL
@@ -13,6 +13,16 @@ If you're having problems with oidentd, additional debugging information is
 available when the --enable-debug option is passed to the configure script and
 oidentd is run with the --debug flag.
 
+On Linux, oidentd compiles with libnetfilter_conntrack support by default if
+IP masquerade support is enabled and the libnetfilter_conntrack and libcap-ng
+headers and libraries are present.  This allows oidentd to obtain connection
+tracking information directly from the kernel instead of using the "/proc"
+filesystem.  When oidentd is compiled on Linux with IP masquerade support
+enabled, but one of these libraries is not present, the "./configure" script
+will emit a warning.  This warning can safely be ignored if the target system
+has at least one of the files "nf_conntrack", "ip_conntrack" or "ip_masquerade"
+in "/proc/net".
+
 oidentd version 2 runs only as a standalone daemon.  Therefore, any entries
 for ident in any inetd or xinetd (or any other "super server") configuration
 files must be disabled before running oidentd.  This is the case for
