Update authorship information

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,7 +19,7 @@ Guus Sliepen <sliepen@phys.uu.nl>
 Jan Rękorajski <baggins@pld-linux.org>
 	Allow listening on multiple IPs
 
-Janik Rabe <info@janikrabe.com>
+Janik Rabe <oidentd@janikrabe.com>
 	Everything else (project maintainer)
 
 Joerg Sonnenberger <joerg@bec.de>
