--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Changes in 2.1.0
 * Fixed memory corruption on FreeBSD
-* Changed maintainer to Janik Rabe <info@janikrabe.com>
+* Changed maintainer to Janik Rabe <oidentd@janikrabe.com>
 * Migrated project from CVS to git
 
 Changes in 2.0.9
