--- a/doc/oidentd.8
+++ b/doc/oidentd.8
@@ -203,12 +203,14 @@ The NAT/IP masquerading mappings.
 Per-user configuration file.
 
 .SH AUTHOR
-Ryan McCabe <ryan@numb.org>
+Janik Rabe <oidentd@janikrabe.com>
 .br
-https://github.com/janikrabe/oidentd
+https://oidentd.janikrabe.com
+.PP
+Originally written by Ryan McCabe <ryan@numb.org>.
 
 .SH REPORTING BUGS
-Please report any bugs to Janik Rabe <info@janikrabe.com>.
+Please report any bugs to Janik Rabe <oidentd@janikrabe.com>.
 
 .SH "SEE ALSO"
 .BR oidentd.conf (5)
