--- a/doc/oidentd_masq.conf.5
+++ b/doc/oidentd_masq.conf.5
@@ -63,9 +63,11 @@ somehost					user5			UNIX
 .LP
 
 .SH AUTHOR
-Ryan McCabe <ryan@numb.org>
+Janik Rabe <oidentd@janikrabe.com>
 .br
-https://github.com/janikrabe/oidentd
+https://oidentd.janikrabe.com
+.PP
+Originally written by Ryan McCabe <ryan@numb.org>.
 
 .SH SEE ALSO
 .BR oidentd (8)
