--- a/doc/oidentd.conf.5
+++ b/doc/oidentd.conf.5
@@ -297,9 +297,11 @@ to irc.example.org {
 Reply with "example" to ident lookups for connections to irc.example.org.
 
 .SH AUTHOR
-Ryan McCabe <ryan@numb.org>
+Janik Rabe <oidentd@janikrabe.com>
 .br
-https://github.com/janikrabe/oidentd
+https://oidentd.janikrabe.com
+.PP
+Originally written by Ryan McCabe <ryan@numb.org>.
 
 .SH SEE ALSO
 .BR oidentd (8)
