Update copyright headers

--- a/HACKING
+++ b/HACKING
@@ -1,7 +1,7 @@
 Modifying oidentd
 *****************
 
-Copyright (C) 2018 Janik Rabe
+Copyright (c) 2018 Janik Rabe
 
     Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
