--- a/doc/oidentd.8
+++ b/doc/oidentd.8
@@ -1,4 +1,6 @@
-.\" Copyright (C)  2001-2018  Ryan McCabe <ryan@numb.org>.
+.\" oidentd.8 - oidentd ident (RFC 1413) implementation.
+.\" Copyright (c) 2001-2018 Ryan McCabe <ryan@numb.org>
+.\" Copyright (c) 2018      Janik Rabe  <oidentd@janikrabe.com>
 .\"
 .\" Permission is granted to copy, distribute and/or modify this document
 .\" under the terms of the GNU Free Documentation License, Version 1.1
@@ -107,7 +109,7 @@ already be connected via stdin and stdout. This mode is useful when running
 from listener utilities such as
 .BR inetd (8),
 .BR xinetd (8)
-or 
+or
 .BR tcpserver (8).
 This option implies
 .B \-i
