--- a/doc/oidentd_masq.conf.5
+++ b/doc/oidentd_masq.conf.5
@@ -1,4 +1,6 @@
-.\" Copyright (C)  2001-2018  Ryan McCabe <ryan@numb.org>.
+.\" oidentd.8 - oidentd ident (RFC 1413) implementation.
+.\" Copyright (c) 2001-2018 Ryan McCabe <ryan@numb.org>
+.\" Copyright (c) 2018      Janik Rabe  <oidentd@janikrabe.com>
 .\"
 .\" Permission is granted to copy, distribute and/or modify this document
 .\" under the terms of the GNU Free Documentation License, Version 1.1
