--- a/HACKING
+++ b/HACKING
@@ -64,9 +64,8 @@ is up-to-date.  This includes the files `AUTHORS', `ChangeLog', `HACKING',
 `INSTALL', `KERNEL_SUPPORT.md', `README', and the manual pages in the `doc/'
 directory.  New versions should be released only by the project maintainers.
 
-    In `ChangeLog', add the line "* Released as version <version>." before all
-changes included in the release, replacing `<version>' with the version number
-of the new release.
+    In `ChangeLog', add an entry '* Released as version <version>.' to the top
+of the file, replacing `<version>' with the version number of the new release.
 
     Prepend a summary of all significant changes to the file `NEWS'.  Each
 change should be added as a separate line and prefixed with an asterisk and a
