Change wording in manual pages

--- a/doc/oidentd.8
+++ b/doc/oidentd.8
@@ -12,7 +12,7 @@
 .TH oidentd 8 "2018-01-09" "version 2.1.0"
 
 .SH NAME
-oidentd \- TCP/IP IDENT protocol server
+oidentd \- TCP/IP Ident protocol server
 
 .SH SYNOPSIS
 .BI "oidentd [options]"
@@ -44,8 +44,8 @@ oidentd \- TCP/IP IDENT protocol server
 .B [ \-u or \-\-user=<username|UID> ]
 
 .SH DESCRIPTION
-\fBoidentd\fP is a server that implements the TCP/IP standard IDENT user
-identification protocol as specified in the RFC 1413 document.
+\fBoidentd\fP is a server that implements the Identification Protocol as
+specified in RFC 1413.
 .PP
 \fBoidentd\fP operates by looking up specific TCP connections and returning
 the user name of the process owning the connection.
