--- a/doc/oidentd_masq.conf.5
+++ b/doc/oidentd_masq.conf.5
@@ -12,7 +12,7 @@
 .TH oidentd_masq.conf 5 "2018-01-09" "version 2.1.0"
 
 .SH NAME
-oidentd_masq.conf - oidentd IP masquerading/NAT configuration file.
+oidentd_masq.conf - oidentd IP masquerading (NAT) configuration file.
 
 .SH DESCRIPTION
 If you are using IP masquerading or NAT, oidentd can optionally return a
